k8s-deployment/app/blue-green-deployments/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-app
  labels:
    name: bank-app
